complete overhaul + fixing some bugs